<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="org.crysil.WebserviceListActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ListView
            android:id="@+id/lvWebservice"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:choiceMode="singleChoice"/>

        <Button
            android:id="@+id/webservicelist_addWebservice"
            style="@style/buttonCircleOverflow"
            android:onClick="btAddWebserviceOnClick"/>
    </RelativeLayout>

    <include layout="@layout/activity_indicator"/>

</RelativeLayout>
