...
        android:layout_height="wrap_content"
        android:text="Title"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <EditText
        android:id="@+id/edDialogWebserviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
...
        android:layout_height="wrap_content"
        android:text="Address"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />

    <EditText
        android:id="@+id/edDialogWebserviceAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
...
