<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_create"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_edit"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_delete"/>
</menu>