<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_account_assign_key"
        android:icon="@drawable/ic_action_lock"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_account_assign_key"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_delete"/>
</menu>