...
                android:onClick="btUnregisterOnClick"
                android:text="@string/main_button_unregister"
                android:visibility="invisible"/>
        </RelativeLayout>

        <Button
            android:id="@+id/bt_main_manage_keys"
            style="@style/boldButtonBlack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="btManageKeysOnClick"
            android:text="@string/main_btmanage_keys"/>
...
