<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="org.crysil.KeyListActivity">

    <ListView
        android:id="@+id/lvKeys"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:choiceMode="multipleChoiceModal"/>

    <Button
        android:id="@+id/keylist_addKey"
        style="@style/buttonCircleOverflow"
        android:onClick="btCreateKeyOnClick"/>
</RelativeLayout>
